// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`definition | CONFIGURATION: default | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "tests.__fixtures__.definition.object-arg.world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "tests.__fixtures__.definition.object-arg.headerTitle.1203284554"
    }
});
"
`;

exports[`definition | CONFIGURATION: default | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.default.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: default | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`definition | CONFIGURATION: default | import as 1`] = `
"import { defineMessages as m } from 'react-intl';
m({
    hello: {
        "id": "tests.__fixtures__.definition.import-as.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: default | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "tests.__fixtures__.definition.leading-comment.hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`definition | CONFIGURATION: default | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "tests.__fixtures__.definition.leading-comment-with-description.world.612730937"
    }
});
"
`;

exports[`definition | CONFIGURATION: default | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: default | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: default | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: default | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: default | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`definition | CONFIGURATION: default | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`definition | CONFIGURATION: default | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`definition | CONFIGURATION: default | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.string-literal.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: default | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.use-variable.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: default | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`definition | CONFIGURATION: default | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-func.hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`definition | CONFIGURATION: default | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-specifier.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ub2JqZWN0LWFyZy53b3JsZA=="
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ub2JqZWN0LWFyZy5oZWFkZXJUaXRsZS4xMjAzMjg0NTU0"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24uZGVmYXVsdC5oZWxsbw==",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | import as 1`] = `
"import { defineMessages as m } from 'react-intl';
m({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24uaW1wb3J0LWFzLmhlbGxv",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ubGVhZGluZy1jb21tZW50LmhlbGxv",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ubGVhZGluZy1jb21tZW50LXdpdGgtZGVzY3JpcHRpb24ud29ybGQuNjEyNzMwOTM3"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ubXVsdGktZXhwb3J0LmhlbGxv",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ubXVsdGktZXhwb3J0LmhlbGxv",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24uc3RyaW5nLWxpdGVyYWwuaGVsbG8=",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24udXNlLXZhcmlhYmxlLmhlbGxv",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ud2l0aC1vdGhlci1mdW5jLmhlbGxv",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`definition | CONFIGURATION: hash + relativeTo = "src" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ud2l0aC1vdGhlci1zcGVjaWZpZXIuaGVsbG8=",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ub2JqZWN0LWFyZy53b3JsZA=="
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ub2JqZWN0LWFyZy5oZWFkZXJUaXRsZS4xMjAzMjg0NTU0"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24uZGVmYXVsdC5oZWxsbw==",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | import as 1`] = `
"import { defineMessages as m } from 'react-intl';
m({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24uaW1wb3J0LWFzLmhlbGxv",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ubGVhZGluZy1jb21tZW50LmhlbGxv",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ubGVhZGluZy1jb21tZW50LXdpdGgtZGVzY3JpcHRpb24ud29ybGQuNjEyNzMwOTM3"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ubXVsdGktZXhwb3J0LmhlbGxv",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ubXVsdGktZXhwb3J0LmhlbGxv",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24uc3RyaW5nLWxpdGVyYWwuaGVsbG8=",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24udXNlLXZhcmlhYmxlLmhlbGxv",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ud2l0aC1vdGhlci1mdW5jLmhlbGxv",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`definition | CONFIGURATION: hash + removePrefix = "src/" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ud2l0aC1vdGhlci1zcGVjaWZpZXIuaGVsbG8=",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash base64 | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ub2JqZWN0LWFyZy53b3JsZA=="
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ub2JqZWN0LWFyZy5oZWFkZXJUaXRsZS4xMjAzMjg0NTU0"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash base64 | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24uZGVmYXVsdC5oZWxsbw==",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash base64 | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`definition | CONFIGURATION: hash base64 | import as 1`] = `
"import { defineMessages as m } from 'react-intl';
m({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24uaW1wb3J0LWFzLmhlbGxv",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash base64 | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ubGVhZGluZy1jb21tZW50LmhlbGxv",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`definition | CONFIGURATION: hash base64 | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ubGVhZGluZy1jb21tZW50LXdpdGgtZGVzY3JpcHRpb24ud29ybGQuNjEyNzMwOTM3"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash base64 | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: hash base64 | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ubXVsdGktZXhwb3J0LmhlbGxv",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ubXVsdGktZXhwb3J0LmhlbGxv",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash base64 | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: hash base64 | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: hash base64 | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`definition | CONFIGURATION: hash base64 | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`definition | CONFIGURATION: hash base64 | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`definition | CONFIGURATION: hash base64 | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24uc3RyaW5nLWxpdGVyYWwuaGVsbG8=",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash base64 | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24udXNlLXZhcmlhYmxlLmhlbGxv",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash base64 | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`definition | CONFIGURATION: hash base64 | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ud2l0aC1vdGhlci1mdW5jLmhlbGxv",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`definition | CONFIGURATION: hash base64 | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ud2l0aC1vdGhlci1zcGVjaWZpZXIuaGVsbG8=",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "1926670492"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "1820611081"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "1071257088",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | import as 1`] = `
"import { defineMessages as m } from 'react-intl';
m({
    hello: {
        "id": "3704159885",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "3061481045",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "4160490044"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "386652714",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "386652714",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "322375284",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "3342025680",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "193611303",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`definition | CONFIGURATION: hash murmur3 | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "776008494",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "1926670492"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "1820611081"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "1071257088",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | import as 1`] = `
"import { defineMessages as m } from 'react-intl';
m({
    hello: {
        "id": "3704159885",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "3061481045",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "4160490044"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "386652714",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "386652714",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "322375284",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "3342025680",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "193611303",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`definition | CONFIGURATION: hash unknown fallback to murmur3 | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "776008494",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world'
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.'
    }
});
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | import as 1`] = `
"import { defineMessages as m } from 'react-intl';
m({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: 'hello',
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world'
    }
});
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.module-source-name.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: 'hello world extra'
});
export default defineMessages({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages(messages);
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: 'hello'
});
hello({
    id: 'hoge'
});
"
`;

exports[`definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "tests.__fixtures__.definition.object-arg.world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "tests.__fixtures__.definition.object-arg.headerTitle.1203284554"
    }
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.default.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | import as 1`] = `
"import { defineMessages as m } from 'react-intl';
m({
    hello: {
        "id": "tests.__fixtures__.definition.import-as.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "tests.__fixtures__.definition.leading-comment.hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "tests.__fixtures__.definition.leading-comment-with-description.world.612730937"
    }
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.string-literal.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.use-variable.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-func.hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-specifier.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "tests.__fixtures__.definition.object-arg.world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "tests.__fixtures__.definition.object-arg.headerTitle.1203284554"
    }
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.default.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | import as 1`] = `
"import { defineMessages as m } from 'react-intl';
m({
    hello: {
        "id": "tests.__fixtures__.definition.import-as.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "tests.__fixtures__.definition.leading-comment.hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "tests.__fixtures__.definition.leading-comment-with-description.world.612730937"
    }
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.string-literal.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.use-variable.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-func.hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`definition | CONFIGURATION: relativeTo = "../" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-specifier.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "tests.__fixtures__.definition.object-arg.world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "tests.__fixtures__.definition.object-arg.headerTitle.1203284554"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.default.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | import as 1`] = `
"import { defineMessages as m } from 'react-intl';
m({
    hello: {
        "id": "tests.__fixtures__.definition.import-as.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "tests.__fixtures__.definition.leading-comment.hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "tests.__fixtures__.definition.leading-comment-with-description.world.612730937"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.string-literal.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.use-variable.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-func.hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-specifier.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "tests.__fixtures__.definition.object-arg.world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "tests.__fixtures__.definition.object-arg.headerTitle.1203284554"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | Object 2`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "tests.__fixtures__.definition.object-arg.world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "tests.__fixtures__.definition.object-arg.headerTitle.1203284554"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.default.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | default 2`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.default.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | eval string 2`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | import as 1`] = `
"import { defineMessages as m } from 'react-intl';
m({
    hello: {
        "id": "tests.__fixtures__.definition.import-as.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | import as 2`] = `
"import { defineMessages as m } from 'react-intl';
m({
    hello: {
        "id": "tests.__fixtures__.definition.import-as.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "tests.__fixtures__.definition.leading-comment.hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | leading comment 2`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "tests.__fixtures__.definition.leading-comment.hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "tests.__fixtures__.definition.leading-comment-with-description.world.612730937"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | leading comment with description 2`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "tests.__fixtures__.definition.leading-comment-with-description.world.612730937"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | moduleSourceName 2`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | multi export 2`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | not transform if callee is not identifier 2`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | not transform if defineMessages is not imported 2`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | not transform when defineMessages argumens is empty 2`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | not transform when defineMessages argumens is not object 2`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | not transfrom when the variable can not be found 2`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.string-literal.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | string literal 2`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.string-literal.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.use-variable.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | when using the variable 2`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.use-variable.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | with include value 2`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-func.hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | with other func 2`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-func.hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-specifier.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src.__fixtures__" | with other specifier 2`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-specifier.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "tests.__fixtures__.definition.object-arg.world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "tests.__fixtures__.definition.object-arg.headerTitle.1203284554"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.default.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | import as 1`] = `
"import { defineMessages as m } from 'react-intl';
m({
    hello: {
        "id": "tests.__fixtures__.definition.import-as.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "tests.__fixtures__.definition.leading-comment.hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "tests.__fixtures__.definition.leading-comment-with-description.world.612730937"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.string-literal.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.use-variable.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-func.hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = "src/" -- with slash | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-specifier.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "tests.__fixtures__.definition.object-arg.world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "tests.__fixtures__.definition.object-arg.headerTitle.1203284554"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.default.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | import as 1`] = `
"import { defineMessages as m } from 'react-intl';
m({
    hello: {
        "id": "tests.__fixtures__.definition.import-as.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "tests.__fixtures__.definition.leading-comment.hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "tests.__fixtures__.definition.leading-comment-with-description.world.612730937"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.string-literal.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.use-variable.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-func.hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = /__fixtures__/ | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-specifier.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "headerTitle.1203284554"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | import as 1`] = `
"import { defineMessages as m } from 'react-intl';
m({
    hello: {
        "id": "hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "world.612730937"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`definition | CONFIGURATION: removePrefix = true | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: separator = "_" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "tests___fixtures___definition_object-arg_world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "tests___fixtures___definition_object-arg_headerTitle_1203284554"
    }
});
"
`;

exports[`definition | CONFIGURATION: separator = "_" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests___fixtures___definition_default_hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: separator = "_" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`definition | CONFIGURATION: separator = "_" | import as 1`] = `
"import { defineMessages as m } from 'react-intl';
m({
    hello: {
        "id": "tests___fixtures___definition_import-as_hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: separator = "_" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "tests___fixtures___definition_leading-comment_hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`definition | CONFIGURATION: separator = "_" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "tests___fixtures___definition_leading-comment-with-description_world_612730937"
    }
});
"
`;

exports[`definition | CONFIGURATION: separator = "_" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: separator = "_" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "tests___fixtures___definition_multi-export_hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "tests___fixtures___definition_multi-export_hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: separator = "_" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`definition | CONFIGURATION: separator = "_" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`definition | CONFIGURATION: separator = "_" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`definition | CONFIGURATION: separator = "_" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`definition | CONFIGURATION: separator = "_" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`definition | CONFIGURATION: separator = "_" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests___fixtures___definition_string-literal_hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`definition | CONFIGURATION: separator = "_" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "tests___fixtures___definition_use-variable_hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`definition | CONFIGURATION: separator = "_" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`definition | CONFIGURATION: separator = "_" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests___fixtures___definition_with-other-func_hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`definition | CONFIGURATION: separator = "_" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests___fixtures___definition_with-other-specifier_hello",
        "defaultMessage": "hello world"
    }
});
"
`;
